--- a/index.html
+++ b/index.html
@@ -3,171 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IST Ngruki | Imaarotu Syu’unith Tholabah</title>
+  <title>IST Ngruki</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="assets/icons/logo.png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
   <style>
-    html { scroll-behavior: smooth; }
-    .divider {
-      height: 2px;
-      background: linear-gradient(90deg, #6366f1 0%, #334155 100%);
-      border-radius: 9999px;
-      margin: 0 auto;
-      width: 80%;
-      opacity: 0.5;
-    }
-    /* Efek floating animasi untuk foto background */
-    .animate-floating {
-      animation: floating 6s ease-in-out infinite;
-    }
-    @keyframes floating {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-20px); }
+    .bg-hero {
+      background-image: url('assets/images/bg-ist.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
   </style>
-  <script>
-    // Animasi fade-in untuk elemen utama
-    document.addEventListener('DOMContentLoaded', function() {
-      document.querySelectorAll('.animate-fadein').forEach(function(el, i) {
-        setTimeout(() => {
-          el.classList.add('opacity-100', 'translate-y-0');
-        }, 200 + i * 150);
-      });
-    });
-  </script>
 </head>
-<body class="bg-gradient-to-br from-slate-900 via-slate-800 to-indigo-900 text-slate-200 font-sans min-h-screen">
-
+<body class="bg-slate-900 text-white">
   <!-- Navbar -->
-  <header class="sticky top-0 bg-gradient-to-r from-indigo-700 via-slate-800 to-indigo-900 shadow-lg z-50 animate-fadein opacity-0 translate-y-4 transition-all duration-700">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between">
-      <h1 class="text-2xl font-extrabold text-white tracking-wide flex items-center gap-2">
-        <i class="fas fa-university text-indigo-300"></i>
-        IST Ngruki
-      </h1>
-      <nav class="space-x-6 flex text-base font-medium">
+  <nav class="bg-slate-800 p-4 shadow-md">
+    <div class="container mx-auto flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <img src="assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
+        <h1 class="text-xl font-bold">IST Ngruki</h1>
+      </div>
+      <ul class="flex space-x-4">
         <a href="index.html" class="text-indigo-400 font-semibold underline underline-offset-4">Beranda</a>
         <a href="about.html" class="hover:text-indigo-400 transition">Tentang Kami</a>
         <a href="profile.html" class="hover:text-indigo-400 transition">Profil</a>
         <a href="news.html" class="hover:text-indigo-400 transition">Berita</a>
         <a href="event.html" class="hover:text-indigo-400 transition">Pendaftaran</a>
-      </nav>
+      </ul>
     </div>
-    <div class="divider"></div>
-  </header>
+  </nav>
 
   <!-- Hero Section -->
-  <section class="relative bg-gradient-to-br from-indigo-800 via-slate-800 to-indigo-900 py-24 animate-fadein opacity-0 translate-y-4 transition-all duration-700 rounded-b-3xl shadow-lg mb-10 overflow-hidden">
-    <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=1200&q=80" alt="Foto Pondok" class="absolute inset-0 w-full h-full object-cover opacity-30 pointer-events-none select-none rounded-b-3xl animate-floating" />
-    <div class="relative max-w-4xl mx-auto px-4 text-center">
-      <h2 class="text-5xl font-extrabold mb-4 text-white drop-shadow-lg tracking-tight flex items-center justify-center gap-3">
-        <i class="fas fa-users text-indigo-300"></i>
-        Imaarotu Syu’unith Tholabah
-      </h2>
-      <p class="text-xl text-slate-200 mb-8">Menjadi garda terdepan dalam membina, membimbing, dan melayani santri Pondok Pesantren Islam Al Mukmin Ngruki</p>
-      <a href="about.html" class="bg-indigo-500 text-white px-8 py-3 rounded-full shadow-lg hover:bg-indigo-600 hover:scale-105 hover:shadow-xl transition-all duration-300 font-semibold text-lg flex items-center gap-2">
-        <i class="fas fa-info-circle"></i>
-        Selengkapnya
-      </a>
+  <section class="text-center py-32 bg-hero relative">
+    <div class="bg-black/60 absolute inset-0"></div>
+    <div class="relative z-10 px-4">
+      <h2 class="text-4xl font-bold text-indigo-400 mb-4 animate-fade-in">Selamat Datang di Website Resmi</h2>
+      <h1 class="text-6xl font-extrabold text-white mb-6 animate-fade-in">Imaarotu Syu'unith Tholabah</h1>
+      <p class="text-lg text-slate-200 mb-8 animate-fade-in">OSIS Pondok Pesantren Islam Al Mukmin Ngruki</p>
+      <a href="event.html" class="bg-indigo-500 hover:bg-indigo-600 text-white px-6 py-3 rounded-full transition">Lihat Event Kami</a>
     </div>
-    <div class="divider mt-10"></div>
   </section>
 
   <!-- Berita Terbaru -->
-  <section class="max-w-6xl mx-auto px-4 py-12 animate-fadein opacity-0 translate-y-4 transition-all duration-700">
-    <h3 class="text-3xl font-bold text-indigo-400 mb-8 flex items-center gap-2">
-      <i class="fas fa-newspaper text-indigo-300"></i>
-      Berita Terbaru
-    </h3>
-    <div class="grid md:grid-cols-3 gap-8">
-      <!-- Berita 1 -->
-      <div class="bg-gradient-to-br from-slate-800 via-slate-900 to-indigo-900 rounded-xl shadow-lg hover:shadow-2xl transition border border-indigo-700">
-        <img src="https://source.unsplash.com/600x400/?school,event" alt="Foto Kegiatan" class="rounded-t-xl">
-        <div class="p-4">
-          <h4 class="text-lg font-bold text-indigo-400 flex items-center gap-2">
-            <i class="fas fa-star text-yellow-400"></i>
-            IST Festival 2025 Sukses Digelar
-          </h4>
-          <p class="text-slate-400 text-sm mb-2 flex items-center gap-2">
-            <i class="fas fa-calendar-alt"></i>
-            15 Juli 2025
-          </p>
-          <p class="text-slate-300 text-sm">Ribuan peserta dan pengunjung memadati area pondok dalam rangkaian IST Festival 2025. Mulai dari lomba hingga malam puncak IST Night berlangsung meriah.</p>
-        </div>
-      </div>
-      <!-- Berita 2 -->
-      <div class="bg-gradient-to-br from-slate-800 via-slate-900 to-indigo-900 rounded-xl shadow-lg hover:shadow-2xl transition border border-indigo-700">
-        <img src="https://source.unsplash.com/600x400/?students,meeting" alt="Foto Rapat" class="rounded-t-xl">
-        <div class="p-4">
-          <h4 class="text-lg font-bold text-indigo-400 flex items-center gap-2">
-            <i class="fas fa-users text-indigo-300"></i>
-            Rapat Koordinasi Antar Departemen
-          </h4>
-          <p class="text-slate-400 text-sm mb-2 flex items-center gap-2">
-            <i class="fas fa-calendar-alt"></i>
-            2 Juli 2025
-          </p>
-          <p class="text-slate-300 text-sm">IST Kalimasada menggelar rapat koordinasi internal untuk mematangkan agenda semester ganjil dan pembagian tugas antar pengurus departemen.</p>
-        </div>
-      </div>
-      <!-- Berita 3 -->
-      <div class="bg-gradient-to-br from-slate-800 via-slate-900 to-indigo-900 rounded-xl shadow-lg hover:shadow-2xl transition border border-indigo-700">
-        <img src="https://source.unsplash.com/600x400/?mosque,community" alt="Foto Masjid" class="rounded-t-xl">
-        <div class="p-4">
-          <h4 class="text-lg font-bold text-indigo-400 flex items-center gap-2">
-            <i class="fas fa-mosque text-indigo-300"></i>
-            Program Takmir Masjid Al-Mukmin Diluncurkan
-          </h4>
-          <p class="text-slate-400 text-sm mb-2 flex items-center gap-2">
-            <i class="fas fa-calendar-alt"></i>
-            24 Juni 2025
-          </p>
-          <p class="text-slate-300 text-sm">Departemen Takmir IST resmi meluncurkan jadwal baru kajian, kebersihan, dan piket adzan di Masjid Pondok sebagai bentuk peran aktif santri.</p>
-        </div>
+  <section class="container mx-auto px-4 py-16">
+    <h2 class="text-3xl font-bold text-indigo-400 mb-6">Berita Terbaru</h2>
+    <div class="bg-slate-800 rounded-lg overflow-hidden shadow-lg hover:shadow-xl transition">
+      <img src="assets/images/adinaya.webp" alt="Berita IST" class="w-full h-64 object-cover">
+      <div class="p-6">
+        <h3 class="text-2xl font-semibold mb-2">Pembukaan IST Festival 2025 Meriah dan Penuh Semangat</h3>
+        <p class="text-slate-300 mb-4">IST Festival 2025 resmi dibuka oleh pimpinan pondok dengan sambutan hangat. Acara ini diikuti oleh puluhan sekolah dari berbagai daerah.</p>
+        <a href="news.html" class="text-indigo-400 hover:underline">Baca Selengkapnya →</a>
       </div>
     </div>
-  </section>
-
-  <!-- Tentang IST -->
-  <section class="py-16 bg-slate-800/80 animate-fadein opacity-0 translate-y-4 transition-all duration-700 rounded-2xl shadow-lg mb-10 border border-indigo-700">
-    <div class="max-w-5xl mx-auto px-4 text-center">
-      <h3 class="text-3xl font-bold text-indigo-400 mb-6 tracking-wide flex items-center justify-center gap-2">
-        <i class="fas fa-info text-indigo-300"></i>
-        Tentang IST
-      </h3>
-      <p class="text-slate-300 leading-relaxed text-lg max-w-3xl mx-auto">
-        Imaarotu Syu’unith Tholabah adalah organisasi santri yang berfungsi sebagai wadah kepemimpinan, pelatihan dakwah, dan penggerak kegiatan santri di lingkungan Pondok Pesantren Islam Al Mukmin Ngruki.<br>
-        Kami berkomitmen membangun karakter santri yang berakhlak, aktif, dan kontributif.
-      </p>
-    </div>
-    <div class="divider mt-10"></div>
-  </section>
-
-  <!-- CTA -->
-  <section class="bg-gradient-to-br from-indigo-800 via-slate-800 to-indigo-900 text-white py-16 animate-fadein opacity-0 translate-y-4 transition-all duration-700 rounded-2xl shadow-lg mb-10 border-t-4 border-indigo-700">
-    <div class="max-w-4xl mx-auto px-4 text-center">
-      <h4 class="text-2xl font-semibold mb-6 flex items-center justify-center gap-2">
-        <i class="fas fa-calendar-check text-indigo-300"></i>
-        Ingin bergabung dalam kegiatan kami?
-      </h4>
-      <a href="event.html" class="bg-indigo-500 hover:bg-indigo-600 hover:scale-105 px-8 py-3 rounded-full shadow-lg transition-all duration-300 font-semibold text-lg flex items-center gap-2">
-        <i class="fas fa-edit"></i>
-        Lihat Event & Daftar
-      </a>
-    </div>
-    <div class="divider mt-10"></div>
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gradient-to-r from-indigo-700 via-slate-800 to-indigo-900 text-center text-slate-400 text-sm py-8 border-t border-indigo-700 rounded-t-2xl shadow-lg mt-10 animate-fadein opacity-0 translate-y-4 transition-all duration-700">
-    <div class="flex justify-center items-center gap-2 mb-2">
-      <i class="fas fa-university text-indigo-300"></i>
-      <span class="font-bold text-white">IST Ngruki</span>
-    </div>
-    <span class="block mb-2">&copy; 2025 IST Ngruki. Seluruh hak cipta dilindungi.</span>
-    <span class="text-xs text-slate-500">Design by GitHub Copilot</span>
+  <footer class="bg-slate-800 p-4 text-center text-slate-400">
+    &copy; 2025 IST Ngruki. All rights reserved.
   </footer>
 
+  <!-- Tailwind Animasi Manual -->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          animation: {
+            'fade-in': 'fadeIn 1.5s ease-out forwards'
+          },
+          keyframes: {
+            fadeIn: {
+              '0%': { opacity: 0, transform: 'translateY(20px)' },
+              '100%': { opacity: 1, transform: 'translateY(0)' },
+            }
+          }
+        }
+      }
+    }
+  </script>
 </body>
 </html>
