--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>tentang kami</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/assets/icons/logo.png">
+  <link rel="icon" href="assets/icons/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
 </head>
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-indigo-900 text-slate-200 font-sans min-h-screen">
