--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
   <nav class="bg-slate-800 p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
-        <img src="/assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
+        <img src="assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
         <h1 class="text-xl font-bold text-white">Imaarotu Syu’unith Tholabah</h1>
       </div>
       <!-- Hamburger Button (mobile) -->
