--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Edit Berita</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/icons/logo.png">
 </head>
 <body class="bg-slate-900 text-white min-h-screen">
   <script>
