--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>pendaftaran ist festival</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/assets/icons/logo.png">
+  <link rel="icon" href="assets/icons/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
 </head>
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-indigo-900 text-slate-200 min-h-screen">
@@ -14,7 +14,7 @@
   <nav class="bg-slate-800 p-4 shadow-md">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-3">
-        <img src="/assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
+        <img src="assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
         <h1 class="text-xl font-bold text-white">Imaarotu Syu’unith Tholabah</h1>
       </div>
       <!-- Hamburger Button (mobile) -->
