--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IST Ngruki</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/icons/logo.png">
   <style>
     .bg-hero {
       background-image: url('assets/images/bg-ist.jpg');
