--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Admin IST</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="assets/icons/logo.png">
 </head>
 <body class="bg-slate-900 text-white min-h-screen flex items-center justify-center">
   <div class="bg-slate-800 rounded-xl shadow-lg p-8 w-full max-w-md">
