--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Berita</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/assets/icons/logo.png">
+  <link rel="icon" href="assets/icons/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
   <style>
     html { scroll-behavior: smooth; }
