--- a/profile.html
+++ b/profile.html
@@ -45,15 +45,14 @@
   <!-- Hero -->
   <section class="bg-gradient-to-br from-indigo-800 via-slate-800 to-indigo-900 py-16 text-center rounded-b-3xl shadow-lg mb-10">
     <h2 class="text-3xl font-extrabold text-white mb-2 flex items-center justify-center gap-2">
-      <i class="fas fa-user-circle text-indigo-300"></i>
       Profil IST Ngruki
     </h2>
-    <p class="text-slate-400">Selamat datang di halaman profil IST Ngruki. Kenali kami lebih dekat.</p>
+    <p class="text-slate-400">Selamat datang di halaman profil IST Ngruki.</p>
   </section>
 
   <!-- Visi dan Misi -->
   <section class="max-w-4xl mx-auto px-4 py-12 bg-slate-800/80 rounded-2xl shadow-lg mb-10 border border-indigo-700">
-    <h3 class="text-2xl font-bold text-indigo-400 mb-4 flex items-center gap-2">
+    <h3 class="text-2xl font-bold text-indigo-400 mb-8 text-center flex items-center justify-center gap-2">
       <i class="fas fa-bullseye text-indigo-300"></i>
       Visi dan Misi
     </h3>
@@ -73,30 +72,35 @@
     </div>
   </section>
 
-  <!-- Struktur Organisasi -->
-  <section class="max-w-5xl mx-auto px-4 py-12 bg-slate-800/80 rounded-2xl shadow-lg mb-10 border border-indigo-700">
-    <h3 class="text-2xl font-bold text-indigo-400 mb-4 flex items-center gap-2">
-      <i class="fas fa-sitemap text-indigo-300"></i>
-      Struktur Organisasi
-    </h3>
-    <div class="grid md:grid-cols-2 gap-6 text-slate-300">
+  <!-- Tambahkan ini di bagian bawah Hero Section -->
+<section class="max-w-4xl mx-auto px-4 py-12 bg-slate-800/80 rounded-2xl shadow-lg mb-10 border border-indigo-700">
+  <h3 class="text-2xl font-bold text-indigo-400 mb-8 text-center flex items-center justify-center gap-2">
+    <i class="fas fa-layer-group text-indigo-300"></i>
+    Periode Kepengurusan IST
+  </h3>
+  
+  <div class="grid md:grid-cols-2 gap-8">
 
-      <div><strong>Bendahara:</strong> Bisma</div>
-      <div><strong>Sekretaris:</strong> Semar</div>
-      <div><strong>Keamanan:</strong> Arjuna</div>
-      <div><strong>Tandhim / Belajar Malam:</strong> Antasena</div>
-      <div><strong>Bahasa:</strong> Lesmana</div>
-      <div><strong>Kebersihan / Nadzofah:</strong> Nakula</div>
-      <div><strong>Dakwah:</strong> Sadewa</div>
-      <div><strong>Takmir:</strong> Puntadewa</div>
-      <div><strong>Al-Mukminun / Jurnalistik:</strong> Abimanyu</div>
-      <div><strong>Rivan / Olahraga:</strong> Rama Wijaya</div>
-      <div><strong>Waserda / Kantin:</strong> Werkudara</div>
-      <div><strong>BP / Kesehatan:</strong> Baladewa</div>
-      <div><strong>Ghurfah / Penerimaan Tamu:</strong> Gareng</div>
+    <!-- Kartu Adinaya -->
+    <a href="periode/adinaya.html" class="bg-slate-800/80 hover:bg-slate-700 transition rounded-xl p-6 border border-indigo-600 shadow-lg flex items-center gap-4">
+      <img src="assets/adinaya/logobag/" alt="Logo Adinaya" class="w-16 h-16 object-contain">
+      <div>
+        <h4 class="text-xl font-semibold text-white">Adinaya</h4>
+        <p class="text-slate-400 text-sm">Periode tahun 2024-2025</p>
+      </div>
+    </a>
 
-    </div>
-  </section>
+    <!-- Kartu Kalimasada -->
+    <a href="periode/kalimasada.html" class="bg-slate-800/80 hover:bg-slate-700 transition rounded-xl p-6 border border-indigo-600 shadow-lg flex items-center gap-4">
+      <img src="assets/kalimasada/logobag/KALIMASADA.webp" alt="Logo Kalimasada" class="w-16 h-16 object-contain">
+      <div>
+        <h4 class="text-xl font-semibold text-white">Kalimasada</h4>
+        <p class="text-slate-400 text-sm">Periode tahun 2023-2024</p>
+      </div>
+    </a>
+
+  </div>
+</section>
 
   <!-- Placeholder Sejarah Singkat -->
   <section class="max-w-5xl mx-auto px-4 py-8 bg-slate-800/80 rounded-2xl shadow-lg mb-10 border-t-4 border-indigo-700">
@@ -104,7 +108,7 @@
       <i class="fas fa-history text-indigo-300"></i>
       Sejarah Singkat
     </h3>
-    <p class="text-slate-400 italic">Data akan ditambahkan... Jika kamu punya dokumentasi, silakan hubungi pengurus IST 😄</p>
+    <p class="text-slate-400 italic">nyusul bree</p>
   </section>
 
   <footer class="bg-gradient-to-r from-indigo-700 via-slate-800 to-indigo-900 text-center text-slate-400 text-sm py-8 border-t border-indigo-700 rounded-t-2xl shadow-lg mt-10">
