--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="about.html" class="hover:text-indigo-400 transition">Tentang Kami</a>
         <a href="profile.html" class="hover:text-indigo-400 transition">Profil</a>
         <a href="news.html" class="hover:text-indigo-400 transition">Berita</a>
-        <a href="event.html" class="hover:text-indigo-400 transition">event</a>
+        <a href="event.html" class="hover:text-indigo-400 transition">Event</a>
       </ul>
     </div>
   </nav>
