--- a/event.html
+++ b/event.html
@@ -28,7 +28,7 @@
         <a href="index.html" class="hover:text-indigo-400 transition">Beranda</a>
         <a href="about.html" class="hover:text-indigo-400 transition">Tentang Kami</a>
         <a href="profile.html" class="hover:text-indigo-400 transition">Profil</a>
-        <a href="event.html" class="text-indigo-400 font-semibold underline underline-offset-4">event</a>
+        <a href="event.html" class="text-indigo-400 font-semibold underline underline-offset-4">Event</a>
         <a href="news.html" class="hover:text-indigo-400 transition">Berita</a>
       </div>
     </div>
