--- a/news.html
+++ b/news.html
@@ -3,22 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Berita</title>
+  <title>Berita - IST Ngruki</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/icons/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
-  <style>
-    html { scroll-behavior: smooth; }
-  </style>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      document.querySelectorAll('.animate-fadein').forEach(function(el, i) {
-        setTimeout(() => {
-          el.classList.add('opacity-100', 'translate-y-0');
-        }, 200 + i * 150);
-      });
-    });
-  </script>
 </head>
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-indigo-900 text-slate-200 min-h-screen">
 
@@ -53,7 +41,6 @@
       navMenu.classList.toggle('hidden');
     });
   </script>
-
   <!-- Hero -->
   <section class="bg-gradient-to-br from-indigo-800 via-slate-800 to-indigo-900 py-16 text-center rounded-b-3xl shadow-lg mb-10">
     <h2 class="text-3xl font-extrabold text-white mb-2 flex items-center justify-center gap-2">
