--- a/profile.html
+++ b/profile.html
@@ -83,7 +83,7 @@
 
     <!-- Kartu Adinaya -->
     <a href="periode/adinaya.html" class="bg-slate-800/80 hover:bg-slate-700 transition rounded-xl p-6 border border-indigo-600 shadow-lg flex items-center gap-4">
-      <img src="assets/adinaya/logobag/" alt="Logo Adinaya" class="w-16 h-16 object-contain">
+      <img src="assets/adinaya/logobag/adinaya.webp" alt="Logo Adinaya" class="w-16 h-16 object-contain">
       <div>
         <h4 class="text-xl font-semibold text-white">Adinaya</h4>
         <p class="text-slate-400 text-sm">Periode tahun 2024-2025</p>
