--- a/periode/kalimasada.html
+++ b/periode/kalimasada.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html lang="id">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Periode Kalimasada - IST Ngruki</title>
+  <title>Kalimasada - IST Ngruki</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="../assets/icons/logo.png">
+  <link rel="icon" href="/assets/icons/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
 </head>
-
 <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-indigo-900 text-slate-200 min-h-screen">
 
-  <!-- Navbar akan dimuat di sini -->
-  <header id="navbar-placeholder" class="bg-slate-800 p-4 shadow-md"></header>
-
+  <!-- Navbar -->
+  <nav class="bg-slate-800 p-4 shadow-md">
+    <div class="container mx-auto flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <img src="/assets/icons/logo.png" alt="Logo IST" class="w-10 h-10">
+        <h1 class="text-xl font-bold text-white">Imaarotu Syu’unith Tholabah</h1>
+      </div>
+      <!-- Hamburger Button (mobile) -->
+      <button id="menu-btn" class="md:hidden text-indigo-400 focus:outline-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+      <!-- Menu -->
+      <div id="nav-menu" class="hidden md:flex space-x-6 text-base font-medium flex-col md:flex-row absolute md:static top-16 left-0 w-full md:w-auto bg-slate-800 md:bg-transparent z-40 md:z-auto p-4 md:p-0">
+        <a href="/index.html" class="hover:text-indigo-400 transition">Beranda</a>
+        <a href="/about.html" class="hover:text-indigo-400 transition">Tentang Kami</a>
+        <a href="/profile.html" class="hover:text-indigo-400 transition">Profil</a>
+        <a href="/event.html" class="hover:text-indigo-400 transition">Event</a>
+        <a href="/news.html" class="hover:text-indigo-400 transition">Berita</a>
+      </div>
+    </div>
+  </nav>
+  <script>
+    // Navbar mobile toggle
+    const menuBtn = document.getElementById('menu-btn');
+    const navMenu = document.getElementById('nav-menu');
+    menuBtn.addEventListener('click', () => {
+      navMenu.classList.toggle('hidden');
+    });
+  </script>
   <main>
     <!-- Hero Section -->
     <section
@@ -606,9 +632,9 @@
               class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-indigo-500">
             <h5 class="text-xl font-bold text-white">Ilham Ngimaduddin</h5>
             <p class="text-indigo-400 font-semibold">Anggota</p>
-            <a href="https://instagram.com/usernamewakil" target="_blank"
+            <a href="https://instagram.com/_hammndin" target="_blank"
               class="text-slate-400 hover:text-white transition mt-2 inline-block">
-              <i class="fab fa-instagram"></i> @username
+              <i class="fab fa-instagram"></i> @_hammndin
             </a>
           </div>
           <div
@@ -617,9 +643,9 @@
               class="w-24 h-24 rounded-full mx-auto mb-4 border-4 border-indigo-500">
             <h5 class="text-xl font-bold text-white">Arriyan Al Kapisan</h5>
             <p class="text-indigo-400 font-semibold">Anggota</p>
-            <a href="https://instagram.com/_hammndin" target="_blank"
+            <a href="https://instagram.com/riyyan_alk" target="_blank"
               class="text-slate-400 hover:text-white transition mt-2 inline-block">
-              <i class="fab fa-instagram"></i> @_hammndin
+              <i class="fab fa-instagram"></i> @riyyan_alk
             </a>
           </div>
           <div
@@ -660,7 +686,7 @@
       <!-- Bagian Rivan -->
       <div class="mb-12">
         <h4 class="text-2xl font-semibold text-white mb-6 border-b-2 border-indigo-500 pb-2 flex items-center gap-4">
-          <img src="/assets/kalimasada/logobag/RAMA WIJAYA.webp" alt="Logo UBS" class="w-10 h-10 object-contain">
+          <img src="/assets/kalimasada/logobag/RAMA WIJAYA.webp" alt="Logo Rivan" class="w-10 h-10 object-contain">
           <span>Bagian Rivan</span>
         </h4>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
@@ -1300,13 +1326,11 @@
       </div>
     </section>
   </main>
-
-  <!-- Footer akan dimuat di sini -->
-  <footer id="footer-placeholder"
-    class="bg-gradient-to-r from-indigo-700 via-slate-800 to-indigo-900 text-center text-slate-400 text-sm py-8 border-t border-indigo-700 rounded-t-2xl shadow-lg mt-10">
+  <footer class="bg-gradient-to-r from-indigo-700 via-slate-800 to-indigo-900 text-center text-slate-400 text-sm py-8 border-t border-indigo-700 rounded-t-2xl shadow-lg mt-10">
+    <div class="flex justify-center items-center gap-2 mb-2">
+      <span class="font-bold text-white">Imaarotu Syu'unith Tholabah</span>
+    </div>
+    <div>&copy; 2025 IST Ngruki. All rights reserved.</div>
   </footer>
-
-  <script src="/js/components.js" defer></script>
 </body>
-
 </html>
