--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Website resmi Imaarotu Syu'unith Tholabah (IST) Al-Mukmin Ngruki. Organisasi yang mengurus santri di Pondok Pesantren Islam Al Mukmin.">
   <title>Beranda - IST Ngruki</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="assets/icons/logo.png">
