--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
 
   <!-- Placeholder Sejarah Singkat -->
   <section class="max-w-5xl mx-auto px-4 py-8 bg-slate-800/80 rounded-2xl shadow-lg mb-10 border-t-4 border-indigo-700">
-    <h3 class="text-xl font-bold text-slate-200 mb-4 flex items-center gap-2">
+    <h3 class="text-2xl font-bold text-indigo-400 mb-8 text-center flex items-center justify-center gap-2">
       <i class="fas fa-history text-indigo-300"></i>
       Sejarah Singkat
     </h3>
